Backend : refactor -> auth/me now can send user profile fix -> logout now use middleware auth sanctum
Frontend :
feat -> create user profile and logout mechanism
