# backend/app/Features/Auth/Http/Controllers/UserAuthController.php
@@ -63,11 +63,4 @@ final class UserAuthController
         }
 
     }
-
-    public function me(Request $request): JsonResponse
-    {
-        return response()->json(
-            $request->user()->load('role')
-        );
-    }
 }
